3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix Win32 compilation.
 common/loader.l logger.c re-cmp.c
 make_win32/crossfire32.dsp installwin32.bat
 plugins/cfanim/include/cfanim_proto.h
 plugins/cfpython/cfpython_object.c
 random_maps/floor.c treasure.c
Nicolas Weeger 2007-06-10

utils/mapper.c: fix compilation. Fix exit without path not displayed.
Nicolas Weeger 2007-06-10

Remove obsolete player_cmd().
 doc/Developers/protocol
 include/sockproto.h
 socket/loop.c request.c
Nicolas Weeger 2007-06-10

lib/artifacts: update header.
Nicolas Weeger 2007-06-09

Fix bug #1729829: Server using access to check for file existance.
Also remove obsolete old player directory mode support.
 server/login.c
Nicolas Weeger 2007-06-09

Fix bug #1730874: +dam on bracers not working.
 common/living.c: bracers can give damage too.
Nicolas Weeger 2007-06-09

common/loader.l: remove obsolete checks and conversions.
Nicolas Weeger 2007-06-09

Remove obsolete 'map1' and 'map1a' modes.
 doc/Developers/protocol
 include/newserver.h
 socket/init.c request.c
Nicolas Weeger 2007-06-09

Remove obsolete 'item' command, always assume 'item2'.
 doc/Developers/protocol
 include/newserver.h
 socket/init.c item.c request.c
Nicolas Weeger 2007-06-09

Assume clients always use 64b experience mode (commit for that support: MSW 2003-05-17).
 include/newserver.h
 socket/init.c request.c
Nicolas Weeger 2007-06-09

Remove obsolete old_mode support. Remove unused log_kill stuff.
 include/newserver.h sockproto.h sproto.h
 socket/init.c info.c
 server/attack.c c_misc.c commands.c
Nicolas Weeger 2007-06-09

Remove obsolete image/face/face1 support. Increment protocol version to 1028.
 doc/Developers/protocol