@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix accidentally broken unit test.
+ test/unit/common/check_arch.c: use correct type/subtype.
+Nicolas Weeger 2007-06-10
+
 Fix Win32 compilation.
  common/loader.l logger.c re-cmp.c
  make_win32/crossfire32.dsp installwin32.bat
